# ClaudeMeter

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs  updater.rs  usage.rs
src-tauri/src/polling/: mod.rs
src-tauri/src/tray/: mod.rs
src/components/: ApiKeySetup.tsx  CostDisplay.tsx  ErrorState.tsx  Footer.tsx  Header.tsx  LoadingState.tsx  LoginSetup.tsx  TokenBreakdown.tsx  UpdateBanner.tsx  UsageCard.tsx
src/hooks/: useTheme.ts  useUsage.ts
src/lib/: tauri.ts
src/stores/: usageStore.tsx
src/styles/: index.css
