[package]
name = "claude-meter"
version = "0.1.0"
description = "Claude API usage monitor — menubar app"
authors = []
license = ""
repository = ""
default-run = "claude-meter"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "claude_meter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
png = "0.17"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"

[features]
# This feature is used for production builds or when `devUrl` is not set
custom-protocol = ["tauri/custom-protocol"]
